--- a/veterinaria-solidaria-app/src/app/admin/clientes/clientes.component.css
+++ b/veterinaria-solidaria-app/src/app/admin/clientes/clientes.component.css
@@ -1,8 +1,10 @@
 
 
 table{
-    width: 100%;
+    
     height: 400px;
+    width: 100%;
+    position:relative !important;
     
 }
 h1{
@@ -10,4 +12,33 @@ h1{
     text-align: center;  
     background-color: #25FDAA; 
 }
+
+th{
+    font-size: 17px;
+}
+
+button{
+    font-size: 15px;
+    padding: 5px;
+}
+
+.mat-elevation-z8 {
+    height: calc(92vh - 150px);
+    overflow-y: auto;
+}
+
+#paginacion{
+   
+    bottom: 30px;
+    
+    padding-top: 1px;
+    height: 10%;
+    
+ 
+}
+
+#todo{
+    padding: 8px;
+}
+
 
