--- a/veterinaria-solidaria-app/src/app/admin/compras/compras.component.css
+++ b/veterinaria-solidaria-app/src/app/admin/compras/compras.component.css
@@ -1,6 +1,7 @@
 table{
-    width: 100%;
+    
     height: 400px;
+    width: 100%;
 }
 
 h1{
@@ -9,4 +10,30 @@ h1{
     background-color: #25FDAA; 
 }
 
+th{
+    font-size: 17px;
+}
 
+button{
+    font-size: 15px;
+    padding: 5px;
+}
+
+.mat-elevation-z8 {
+    height: calc(92vh - 150px);
+    overflow-y: auto;
+}
+
+#paginacion{
+
+    bottom: 30px;
+    
+    padding-top: 1px;
+    height: 10%;
+    
+ 
+}
+
+#todo{
+    padding: 8px;
+}
