--- a/veterinaria-solidaria-app/src/app/admin/productos/productos.component.html
+++ b/veterinaria-solidaria-app/src/app/admin/productos/productos.component.html
@@ -1,40 +1,173 @@
+<div id="todo" class="ng-container-xxl">
+
 <h1>Administrar Productos</h1>
+
+  <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#agrega" (click)="mostrarcrearformulario()">
+    + Agregar Producto
+  </button>
+
+
+<div class="modal fade" id="agrega" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="agregaLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="agregaLabel">Agregar Producto</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        
+        <form [formGroup]="crearproductoForm" *ngIf="true" (ngSubmit)="crea()"><br>
+          <table>
+
+    
+
+              <div class="input-group mb-3">
+                  <li for="nombreprod" class="input-group-text">Nombre Producto:</li>
+                  <input id="nombreprod" type="text" class="form-control" formControlName="nombreprod" placeholder="Nombre producto...">
+              </div>
+                 
+                  <div class="input-group mb-3">
+                    <li for="descripcion" class="input-group-text">Descripción:</li>
+                    <input id="descripcion" type="text" class="form-control" formControlName="descripcion" placeholder="Descripción...">
+                  </div>
+
+                    <div class="input-group mb-3">
+                      <li for="precioprod" class="input-group-text">Precio Producto:</li>
+                      <input id="precioprod" type="text" class="form-control" formControlName="precioprod" placeholder="Precio producto...">
+                    </div>
+                
+                      <div class="input-group mb-3">
+                        <li for="tipo" class="input-group-text">Tipo:</li>
+                        <input id="tipo" type="text" class="form-control" formControlName="tipo" placeholder="Tipo...">
+                      </div>
+                      
+                        <div class="input-group mb-3">
+                          <li for="stock" class="input-group-text">Stock:</li>
+                          <input id="stock" type="text" class="form-control" formControlName="stock" placeholder="Stock...">
+                          
+                          <button type="submit" [disabled]="!crearproductoForm.valid" class="btn btn-primary" (click)="crear()">OK</button>
+                        </div>
+                      
+                           
+          </table>
+      
+        </form>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="mostrarcrearformulario()">Cerrar</button>
+        
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<br>
+
+
 
 <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource">
   
       <!-- Position Column -->
-      <ng-container matColumnDef="codigoprod">
-        <th mat-header-cell *matHeaderCellDef> Código producto </th>
-        <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+      <ng-container matColumnDef="idproducto">
+        <th mat-header-cell *matHeaderCellDef> Id Producto </th>
+        <td mat-cell *matCellDef="let element"> {{element.idproducto}} </td>
       </ng-container>
   
       <!-- Name Column -->
-      <ng-container matColumnDef="tipo">
-        <th mat-header-cell *matHeaderCellDef> Tipo </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <ng-container matColumnDef="nombreprod">
+        <th mat-header-cell *matHeaderCellDef> Nombre Producto </th>
+        <td mat-cell *matCellDef="let element"> {{element.nombreprod}} </td>
       </ng-container>
   
       <!-- Weight Column -->
-      <ng-container matColumnDef="nombreprod">
-        <th mat-header-cell *matHeaderCellDef> Nombre producto </th>
-        <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+      <ng-container matColumnDef="descripcion">
+        <th mat-header-cell *matHeaderCellDef> Descripción </th>
+        <td mat-cell *matCellDef="let element"> {{element.descripcion}} </td>
       </ng-container>
   
       <!-- Symbol Column -->
-      <ng-container matColumnDef="precio">
-        <th mat-header-cell *matHeaderCellDef> Precio </th>
-        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+      <ng-container matColumnDef="precioprod">
+        <th mat-header-cell *matHeaderCellDef> Precio Producto </th>
+        <td mat-cell *matCellDef="let element"> {{element.precioprod}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="tipo">
+        <th mat-header-cell *matHeaderCellDef> Tipo </th>
+        <td mat-cell *matCellDef="let element"> {{element.tipo}} </td>
       </ng-container>
 
       <ng-container matColumnDef="stock">
         <th mat-header-cell *matHeaderCellDef> Stock </th>
-        <td mat-cell *matCellDef="let element"> {{element.precio}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.stock}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="descripcion">
-        <th mat-header-cell *matHeaderCellDef> Descripción </th>
-        <td mat-cell *matCellDef="let element"> {{element.precio}} </td>
+      <ng-container matColumnDef="opciones">
+        <th mat-header-cell *matHeaderCellDef> Opciones </th>
+        <td mat-cell *matCellDef="let element" >
+          
+          <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#staticBackdrop" (click)="mostrarformulario(element)" >
+            Editar
+          </button>
+
+          <button type="button" class="btn btn-danger" (click)="delete(element.idproducto)">
+            Eliminar
+          </button>
+          
+          <!-- Modal -->
+          <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="staticBackdropLabel">Editar producto</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  
+                  <form [formGroup]="productosForm" *ngIf="true" (ngSubmit)="add()"><br>
+                    <table>
+                        <div class="input-group mb-3">
+                            <li for="nombreprod" class="input-group-text">Nombre Producto:</li>
+                            <input id="nombreprod" type="text" class="form-control" formControlName="nombreprod" placeholder="Nombre producto...">
+                        </div>
+                           
+                            <div class="input-group mb-3">
+                              <li for="descripcion" class="input-group-text">Descripción:</li>
+                              <input id="descripcion" type="text" class="form-control" formControlName="descripcion" placeholder="Descripción...">
+                            </div>
+
+                              <div class="input-group mb-3">
+                                <li for="precioprod" class="input-group-text">Precio producto:</li>
+                                <input id="precioprod" type="text" class="form-control" formControlName="precioprod" placeholder="Precio producto...">
+                              </div>
+                          
+                                <div class="input-group mb-3">
+                                  <li for="tipo" class="input-group-text">Tipo:</li>
+                                  <input id="tipo" type="text" class="form-control" formControlName="tipo" placeholder="Tipo...">
+                                </div>
+                                
+                                  <div class="input-group mb-3">
+                                    <li for="stock" class="input-group-text">Stock:</li>
+                                    <input id="stock" type="text" class="form-control" formControlName="stock" placeholder="Stock...">
+                                    
+                                    <button type="submit" [disabled]="!productosForm.valid" data-bs-dismiss="modal" class="btn btn-primary" (click)="update()">OK</button>
+                                  </div>
+      
+                    </table>
+                </form>
+
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="mostrarformulario()">Cerrar</button>
+                  
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </td>
       </ng-container>
 
   
@@ -42,9 +175,9 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
   
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+    <mat-paginator id="paginacion" [pageSizeOptions]="[5, 10, 20]"
                    showFirstLastButtons 
-                   aria-label="Select page of periodic elements">
+                   aria-label="Selección página productos">
     </mat-paginator>
   </div>
-  
+</div>  
