--- a/veterinaria-solidaria-app/src/app/shared/footer/footer.component.html
+++ b/veterinaria-solidaria-app/src/app/shared/footer/footer.component.html
@@ -1,13 +1,5 @@
 
 <footer class="footer bg-dark text-center">
-        
-             <div class="container py-2">
-
-                <a target="_blank" class="text-white my-2" href="https://pichidegua.cl/">I. Municipalidad de Pichidegua</a>
-
-
-             </div>    
-                        
-       
+    <a target="_blank" class="text-white" href="https://pichidegua.cl/">I. Municipalidad de Pichidegua</a>
 </footer>
 
